Lots of misc compilation fixes